# ComfyUI_Qwen3-TTS

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
core/: __init__.py  audio.py  cache.py  paths.py  progress.py
finetuning/: dataset.py  sft_12hz_v4.py  voicebox_training_common.py
fusion/: __init__.py  make_voicebox_checkpoint.py
inference/voicebox/: __init__.py  runtime.py
scripts/: plan1_voice_clone_instruct.py  plan2_finetune_customvoice.py
voicebox/: runtime.py  training_common.py
workflows/: base_customvoice_clone_instruct.json  compare_x_vector_only_mode.json  customvoice_from_saved_prompt.json  hybrid_clone_instruct_preset.json  plain_customvoice_finetune_and_voicebox_create.json  sft_base_12hz.json  sft_custom_voice_12hz.json  sft_voicebox_12hz.json  sft_voicebox_bootstrap_12hz.json  upload_voicebox_to_hub.json  voice_design_to_prompt_to_customvoice.json  voicebox_bootstrap_finetune.json  voicebox_clone.json  voicebox_clone_experiment.json  voicebox_clone_instruct.json  voicebox_instruct_inference.json  voicebox_morph_and_infer.json  voicebox_morph_from_prompt_and_infer.json  voicebox_retrain.json
